--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react": "16.8.6",
     "react-native": "0.60.0",
     "react-native-gesture-handler": "^1.5.6",
+    "react-native-image-picker": "^2.3.0",
     "react-native-material-textfield": "^0.16.1",
     "react-native-modal": "^11.5.4",
     "react-native-reanimated": "^1.7.0",
